--- a/index.html
+++ b/index.html
@@ -2,110 +2,209 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Game Hub</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Game Hub by DaBaconKid</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin: 40px;
+    * {
+      box-sizing: border-box;
     }
-    h1 {
-      color: #333;
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to bottom right, #1e3c72, #2a5298);
+      color: #f0f0f0;
+      text-align: center;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+    header {
+      padding: 20px;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+    }
+    nav ul {
+      list-style: none;
+      padding: 0;
+    }
+    nav ul li {
+      display: inline-block;
+      margin: 0 10px;
+    }
+    nav ul li a {
+      color: #ffea61;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .container {
+      flex: 1;
+      width: 100%;
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+      background: rgba(0,0,0,0.4);
+      border-radius: 12px;
     }
     .game-section {
-      border: 1px solid #ccc;
-      padding: 20px;
       margin: 40px 0;
+      padding: 20px;
+      background: rgba(255,255,255,0.1);
+      border-radius: 8px;
+    }
+    h2 {
+      margin-top: 0;
+      font-size: 1.8em;
     }
     table {
-      margin: 0 auto;
+      margin: 20px auto;
       border-collapse: collapse;
     }
     td {
       width: 60px;
       height: 60px;
-      text-align: center;
-      vertical-align: middle;
-      font-size: 24px;
-      border: 1px solid #000;
+      border: 2px solid #ddd;
+      font-size: 2em;
+      color: #f0f0f0;
       cursor: pointer;
+      background: rgba(255,255,255,0.05);
+    }
+    input[type=number] {
+      padding: 8px;
+      font-size: 1em;
+      border-radius: 4px;
+      border: none;
+      margin-right: 10px;
     }
     button {
-      padding: 10px 20px;
-      margin-top: 10px;
+      padding: 10px 18px;
+      font-size: 1em;
+      margin: 5px;
+      background: #ffea61;
+      color: #333;
+      border: none;
+      border-radius: 6px;
       cursor: pointer;
+      transition: transform 0.1s;
+    }
+    button:active {
+      transform: scale(0.95);
+    }
+    #snakeCanvas {
+      background: #111;
+      display: block;
+      margin: 0 auto;
+      border: 2px solid #ddd;
+      border-radius: 6px;
+    }
+    footer {
+      padding: 15px;
+      font-size: 0.9em;
+      background: rgba(0,0,0,0.5);
+    }
+    @media (max-width: 600px) {
+      td {
+        width: 40px;
+        height: 40px;
+        font-size: 1.5em;
+      }
+      #snakeCanvas {
+        width: 260px !important;
+        height: 260px !important;
+      }
     }
   </style>
 </head>
 <body>
 
-  <h1>🎮 Welcome to Game Hub!</h1>
-  <p>Select a game to play:</p>
-  <ul>
-    <li><a href="#tic-tac-toe">Tic Tac Toe</a></li>
-    <li><a href="#number-guess">Number Guessing</a></li>
-    <li><a href="#rps">Rock Paper Scissors</a></li>
-  </ul>
+  <header>
+    <h1>Game Hub</h1>
+    <nav>
+      <ul>
+        <li><a href="#tic-tac-toe">Tic Tac Toe</a></li>
+        <li><a href="#number-guess">Guess Number</a></li>
+        <li><a href="#rps">Rock Paper Scissors</a></li>
+        <li><a href="#snake">Snake</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <div class="game-section" id="tic-tac-toe">
-    <h2>Tic Tac Toe</h2>
-    <table id="board">
-      <tr>
-        <td onclick="makeMove(this, 0)"></td>
-        <td onclick="makeMove(this, 1)"></td>
-        <td onclick="makeMove(this, 2)"></td>
-      </tr>
-      <tr>
-        <td onclick="makeMove(this, 3)"></td>
-        <td onclick="makeMove(this, 4)"></td>
-        <td onclick="makeMove(this, 5)"></td>
-      </tr>
-      <tr>
-        <td onclick="makeMove(this, 6)"></td>
-        <td onclick="makeMove(this, 7)"></td>
-        <td onclick="makeMove(this, 8)"></td>
-      </tr>
-    </table>
-    <p id="ttt-result"></p>
-    <button onclick="resetBoard()">Reset</button>
-  </div>
+  <div class="container">
 
-  <div class="game-section" id="number-guess">
-    <h2>Number Guessing Game</h2>
-    <p>Guess a number between 1 and 10:</p>
-    <input type="number" id="guess" min="1" max="10">
-    <button onclick="checkGuess()">Guess</button>
-    <p id="guess-result"></p>
-    <button onclick="resetGuess()">Reset</button>
-  </div>
+    <!-- Tic Tac Toe -->
+    <div class="game-section" id="tic-tac-toe">
+      <h2>Tic Tac Toe</h2>
+      <table id="board">
+        <tr>
+          <td onclick="makeMove(this, 0)"></td>
+          <td onclick="makeMove(this, 1)"></td>
+          <td onclick="makeMove(this, 2)"></td>
+        </tr>
+        <tr>
+          <td onclick="makeMove(this, 3)"></td>
+          <td onclick="makeMove(this, 4)"></td>
+          <td onclick="makeMove(this, 5)"></td>
+        </tr>
+        <tr>
+          <td onclick="makeMove(this, 6)"></td>
+          <td onclick="makeMove(this, 7)"></td>
+          <td onclick="makeMove(this, 8)"></td>
+        </tr>
+      </table>
+      <p id="ttt-result"></p>
+      <button onclick="resetBoard()">Reset Tic Tac Toe</button>
+    </div>
 
-  <div class="game-section" id="rps">
-    <h2>Rock Paper Scissors</h2>
-    <button onclick="playRPS('rock')">Rock</button>
-    <button onclick="playRPS('paper')">Paper</button>
-    <button onclick="playRPS('scissors')">Scissors</button>
-    <p id="rps-result"></p>
+    <!-- Number Guessing -->
+    <div class="game-section" id="number-guess">
+      <h2>Number Guessing</h2>
+      <p>Guess a number between 1 and 20:</p>
+      <input type="number" id="guess" min="1" max="20">
+      <button onclick="checkGuess()">Guess</button>
+      <p id="guess-result"></p>
+      <button onclick="resetGuess()">Reset Number Game</button>
+    </div>
+
+    <!-- Rock Paper Scissors -->
+    <div class="game-section" id="rps">
+      <h2>Rock Paper Scissors</h2>
+      <button onclick="playRPS('rock')">Rock</button>
+      <button onclick="playRPS('paper')">Paper</button>
+      <button onclick="playRPS('scissors')">Scissors</button>
+      <p id="rps-result"></p>
+    </div>
+
+    <!-- Snake Game -->
+    <div class="game-section" id="snake">
+      <h2>Snake</h2>
+      <canvas id="snakeCanvas" width="300" height="300"></canvas>
+      <p id="snakeScore">Score: 0</p>
+      <button onclick="startSnake()">Start Snake</button>
+    </div>
+
   </div>
 
   <footer>
-    <hr>
-    <p>&copy; 2025 Game Hub</p>
+    &copy; 2025 DaBaconKid
   </footer>
 
   <script>
-    // ===== Tic Tac Toe =====
-    let board = ["", "", "", "", "", "", "", "", ""];
+    // ========== Tic Tac Toe ==========
+    let board = ["","","","","","","","",""];
     let currentPlayer = "X";
     let gameOver = false;
 
-    function makeMove(cell, index) {
-      if (board[index] === "" && !gameOver) {
-        board[index] = currentPlayer;
+    function makeMove(cell, idx) {
+      if (board[idx] === "" && !gameOver) {
+        board[idx] = currentPlayer;
         cell.textContent = currentPlayer;
         if (checkWin()) {
           document.getElementById("ttt-result").textContent = currentPlayer + " wins!";
           gameOver = true;
-        } else if (board.every(cell => cell !== "")) {
+        } else if (board.every(c => c !== "")) {
           document.getElementById("ttt-result").textContent = "It's a draw!";
           gameOver = true;
         } else {
@@ -115,65 +214,181 @@
     }
 
     function checkWin() {
-      const winCombos = [
-        [0,1,2], [3,4,5], [6,7,8], // rows
-        [0,3,6], [1,4,7], [2,5,8], // cols
-        [0,4,8], [2,4,6]           // diagonals
+      const combos = [
+        [0,1,2],[3,4,5],[6,7,8],
+        [0,3,6],[1,4,7],[2,5,8],
+        [0,4,8],[2,4,6]
       ];
-      return winCombos.some(combo => 
-        combo.every(i => board[i] === currentPlayer)
-      );
+      return combos.some(c => c.every(i => board[i] === currentPlayer));
     }
 
     function resetBoard() {
-      board = ["", "", "", "", "", "", "", "", ""];
+      board = ["","","","","","","","",""];
       currentPlayer = "X";
       gameOver = false;
-      const cells = document.querySelectorAll("#board td");
-      cells.forEach(cell => cell.textContent = "");
+      document.querySelectorAll("#board td").forEach(cell => cell.textContent = "");
       document.getElementById("ttt-result").textContent = "";
     }
 
-    // ===== Number Guessing Game =====
-    let targetNumber = Math.floor(Math.random() * 10) + 1;
+    // ========== Number Guessing ==========
+    let targetNumber = Math.floor(Math.random() * 20) + 1;
 
     function checkGuess() {
-      const guess = parseInt(document.getElementById("guess").value);
-      const result = document.getElementById("guess-result");
-      if (guess === targetNumber) {
-        result.textContent = "🎉 Correct! You guessed the number!";
-      } else if (guess > targetNumber) {
-        result.textContent = "Too high! Try again.";
+      const g = parseInt(document.getElementById("guess").value);
+      const res = document.getElementById("guess-result");
+      if (!g || g < 1 || g > 20) {
+        res.textContent = "Please enter a number between 1 and 20.";
+        return;
+      }
+      if (g === targetNumber) {
+        res.textContent = "🎉 Correct! You got it!";
+      } else if (g > targetNumber) {
+        res.textContent = "Too high!";
       } else {
-        result.textContent = "Too low! Try again.";
+        res.textContent = "Too low!";
       }
     }
 
     function resetGuess() {
-      targetNumber = Math.floor(Math.random() * 10) + 1;
+      targetNumber = Math.floor(Math.random() * 20) + 1;
       document.getElementById("guess").value = "";
       document.getElementById("guess-result").textContent = "";
     }
 
-    // ===== Rock Paper Scissors =====
-    function playRPS(playerChoice) {
-      const choices = ["rock", "paper", "scissors"];
-      const computerChoice = choices[Math.floor(Math.random() * 3)];
-      let result = "";
-
-      if (playerChoice === computerChoice) {
-        result = "It's a draw!";
+    // ========== Rock Paper Scissors ==========
+    function playRPS(choice) {
+      const opts = ["rock","paper","scissors"];
+      const comp = opts[Math.floor(Math.random() * 3)];
+      let outcome = "";
+      if (choice === comp) {
+        outcome = "It's a draw! You both chose " + choice;
       } else if (
-        (playerChoice === "rock" && computerChoice === "scissors") ||
-        (playerChoice === "paper" && computerChoice === "rock") ||
-        (playerChoice === "scissors" && computerChoice === "paper")
+        (choice === "rock" && comp === "scissors") ||
+        (choice === "paper" && comp === "rock") ||
+        (choice === "scissors" && comp === "paper")
       ) {
-        result = `You win! ${playerChoice} beats ${computerChoice}`;
+        outcome = `You win! ${choice} beats ${comp}`;
       } else {
-        result = `You lose! ${computerChoice} beats ${playerChoice}`;
+        outcome = `You lose! ${comp} beats ${choice}`;
       }
+      document.getElementById("rps-result").textContent = outcome;
+    }
 
-      document.getElementById("rps-result").textContent = result;
+    // ========== Snake ==========
+    const canvas = document.getElementById("snakeCanvas");
+    const ctx = canvas.getContext("2d");
+    const scale = 15;
+    const rows = canvas.height / scale;
+    const cols = canvas.width / scale;
+
+    let snake;
+    let fruit;
+
+    function Snake() {
+      this.body = [];
+      this.body[0] = { x: Math.floor(cols/2), y: Math.floor(rows/2) };
+      this.xdir = 0;
+      this.ydir = 0;
+      this.score = 0;
+
+      this.draw = function() {
+        ctx.fillStyle = "#0f0";
+        for (let i = 0; i < this.body.length; i++) {
+          ctx.fillRect(this.body[i].x * scale, this.body[i].y * scale, scale, scale);
+        }
+      };
+
+      this.update = function() {
+        const head = { x: this.body[0].x + this.xdir, y: this.body[0].y + this.ydir };
+        this.body.unshift(head);
+
+        if (head.x === fruit.x && head.y === fruit.y) {
+          this.score++;
+          document.getElementById("snakeScore").textContent = "Score: " + this.score;
+          placeFruit();
+        } else {
+          this.body.pop();
+        }
+
+        // check collisions with walls or self
+        if (
+          head.x < 0 || head.x >= cols ||
+          head.y < 0 || head.y >= rows ||
+          this.selfCollision()
+        ) {
+          stopSnake();
+        }
+      };
+
+      this.selfCollision = function() {
+        for (let i = 1; i < this.body.length; i++) {
+          if (this.body[i].x === this.body[0].x && this.body[i].y === this.body[0].y) {
+            return true;
+          }
+        }
+        return false;
+      };
+
+      this.changeDirection = function(dir) {
+        if (dir === "Up" && this.ydir !== 1) {
+          this.xdir = 0; this.ydir = -1;
+        } else if (dir === "Down" && this.ydir !== -1) {
+          this.xdir = 0; this.ydir = 1;
+        } else if (dir === "Left" && this.xdir !== 1) {
+          this.xdir = -1; this.ydir = 0;
+        } else if (dir === "Right" && this.xdir !== -1) {
+          this.xdir = 1; this.ydir = 0;
+        }
+      };
+    }
+
+    function placeFruit() {
+      fruit = {
+        x: Math.floor(Math.random() * cols),
+        y: Math.floor(Math.random() * rows)
+      };
+    }
+
+    let snakeInterval;
+
+    function drawFruit() {
+      ctx.fillStyle = "#f00";
+      ctx.fillRect(fruit.x * scale, fruit.y * scale, scale, scale);
+    }
+
+    function loop() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      snake.draw();
+      snake.update();
+      drawFruit();
+    }
+
+    function startSnake() {
+      snake = new Snake();
+      placeFruit();
+      document.getElementById("snakeScore").textContent = "Score: 0";
+      if (snakeInterval) clearInterval(snakeInterval);
+      snakeInterval = setInterval(loop, 150);
+      window.addEventListener("keydown", keyPush);
+    }
+
+    function stopSnake() {
+      clearInterval(snakeInterval);
+      window.removeEventListener("keydown", keyPush);
+      ctx.fillStyle = "rgba(0, 0, 0, 0.5)";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = "#fff";
+      ctx.font = "24px sans-serif";
+      ctx.textAlign = "center";
+      ctx.fillText("Game Over", canvas.width / 2, canvas.height / 2);
+    }
+
+    function keyPush(evt) {
+      const key = evt.key;
+      if (key === "ArrowUp") snake.changeDirection("Up");
+      else if (key === "ArrowDown") snake.changeDirection("Down");
+      else if (key === "ArrowLeft") snake.changeDirection("Left");
+      else if (key === "ArrowRight") snake.changeDirection("Right");
     }
   </script>
 
