--- a/index.html
+++ b/index.html
@@ -431,4 +431,325 @@
     const snakeCtx = snakeCanvas.getContext("2d");
     const scale = 15;
     const rows = snakeCanvas.height / scale;
-    const cols = snakeCanvas
+    const cols = snakeCanvas.width / scale;
+
+    let snake;
+    let food;
+    let snakeScore = 0;
+    let snakeInterval;
+    let snakeDirection = { x: 0, y: 0 };
+    let snakeNextDirection = { x: 0, y: 0 };
+    let snakeRunning = false;
+
+    class SnakeSegment {
+      constructor(x, y) {
+        this.x = x;
+        this.y = y;
+      }
+    }
+
+    function startSnake() {
+      if(snakeRunning) return; // prevent multiple intervals
+      snake = [new SnakeSegment(7, 7)];
+      snakeDirection = { x: 0, y: 0 };
+      snakeNextDirection = { x: 1, y: 0 };
+      placeFood();
+      snakeScore = 0;
+      document.getElementById("snakeScore").textContent = "Score: " + snakeScore;
+      snakeRunning = true;
+      snakeCanvas.focus();
+      snakeInterval = setInterval(updateSnake, 120);
+    }
+
+    function stopSnake() {
+      clearInterval(snakeInterval);
+      snakeRunning = false;
+      snakeDirection = { x: 0, y: 0 };
+      snakeNextDirection = { x: 0, y: 0 };
+      drawSnake(); // clear board with last frame
+    }
+
+    function placeFood() {
+      food = {
+        x: Math.floor(Math.random() * cols),
+        y: Math.floor(Math.random() * rows)
+      };
+      // make sure food doesn't spawn on snake
+      while (snake.some(seg => seg.x === food.x && seg.y === food.y)) {
+        food.x = Math.floor(Math.random() * cols);
+        food.y = Math.floor(Math.random() * rows);
+      }
+    }
+
+    function updateSnake() {
+      snakeDirection = snakeNextDirection;
+      if (snakeDirection.x === 0 && snakeDirection.y === 0) return; // no movement yet
+
+      let head = snake[0];
+      let newX = head.x + snakeDirection.x;
+      let newY = head.y + snakeDirection.y;
+
+      // Check walls (wrap around)
+      if(newX < 0) newX = cols - 1;
+      else if(newX >= cols) newX = 0;
+      if(newY < 0) newY = rows - 1;
+      else if(newY >= rows) newY = 0;
+
+      // Check collision with self
+      if (snake.some(seg => seg.x === newX && seg.y === newY)) {
+        stopSnake();
+        alert("Game over! Your score was: " + snakeScore);
+        return;
+      }
+
+      snake.unshift(new SnakeSegment(newX, newY));
+
+      // Eat food?
+      if (newX === food.x && newY === food.y) {
+        snakeScore++;
+        document.getElementById("snakeScore").textContent = "Score: " + snakeScore;
+        placeFood();
+      } else {
+        snake.pop();
+      }
+
+      drawSnake();
+    }
+
+    function drawSnake() {
+      snakeCtx.fillStyle = "#111";
+      snakeCtx.fillRect(0, 0, snakeCanvas.width, snakeCanvas.height);
+
+      // Draw food
+      snakeCtx.fillStyle = "#ff4136";
+      snakeCtx.fillRect(food.x * scale, food.y * scale, scale, scale);
+
+      // Draw snake
+      snakeCtx.fillStyle = "#2ecc40";
+      for (let seg of snake) {
+        snakeCtx.fillRect(seg.x * scale, seg.y * scale, scale - 1, scale - 1);
+      }
+    }
+
+    // Prevent arrow keys scrolling while playing snake
+    window.addEventListener("keydown", function(e) {
+      const activeSection = document.querySelector("main section.active").id;
+      if (activeSection === "snake") {
+        if (["ArrowUp","ArrowDown","ArrowLeft","ArrowRight"].includes(e.code)) {
+          e.preventDefault();
+          // Change direction only if valid (no reverse)
+          if(e.code === "ArrowUp" && snakeDirection.y !== 1) snakeNextDirection = {x:0, y:-1};
+          else if(e.code === "ArrowDown" && snakeDirection.y !== -1) snakeNextDirection = {x:0, y:1};
+          else if(e.code === "ArrowLeft" && snakeDirection.x !== 1) snakeNextDirection = {x:-1, y:0};
+          else if(e.code === "ArrowRight" && snakeDirection.x !== -1) snakeNextDirection = {x:1, y:0};
+        }
+      }
+    });
+
+    // Also support touch swipe for snake on mobile
+    let touchStartX = 0;
+    let touchStartY = 0;
+
+    snakeCanvas.addEventListener("touchstart", e => {
+      const touch = e.touches[0];
+      touchStartX = touch.clientX;
+      touchStartY = touch.clientY;
+    }, {passive: true});
+
+    snakeCanvas.addEventListener("touchend", e => {
+      const touch = e.changedTouches[0];
+      const dx = touch.clientX - touchStartX;
+      const dy = touch.clientY - touchStartY;
+      if (Math.abs(dx) > Math.abs(dy)) {
+        if (dx > 0 && snakeDirection.x !== -1) snakeNextDirection = {x:1,y:0};
+        else if (dx < 0 && snakeDirection.x !== 1) snakeNextDirection = {x:-1,y:0};
+      } else {
+        if (dy > 0 && snakeDirection.y !== -1) snakeNextDirection = {x:0,y:1};
+        else if (dy < 0 && snakeDirection.y !== 1) snakeNextDirection = {x:0,y:-1};
+      }
+    }, {passive: true});
+
+    // =========== Memory Match ===========
+    const memoryGrid = document.getElementById("memory-grid");
+    const memoryResult = document.getElementById("memory-result");
+    let memoryCards = [];
+    let memoryFlipped = [];
+    let memoryMatched = [];
+
+    const images = [
+      "🍎","🍌","🍇","🍓","🍍","🥝","🍒","🍉"
+    ];
+
+    function setupMemory() {
+      memoryCards = [...images, ...images];
+      shuffleArray(memoryCards);
+      memoryGrid.innerHTML = "";
+      memoryFlipped = [];
+      memoryMatched = [];
+      memoryResult.textContent = "";
+      for(let i=0; i<memoryCards.length; i++) {
+        const card = document.createElement("button");
+        card.textContent = "?";
+        card.style.fontSize = "2em";
+        card.style.background = "#222";
+        card.style.color = "#fff";
+        card.style.borderRadius = "10px";
+        card.style.border = "none";
+        card.style.userSelect = "none";
+        card.dataset.index = i;
+        card.addEventListener("click", memoryFlip);
+        memoryGrid.appendChild(card);
+      }
+    }
+
+    function memoryFlip(e) {
+      const btn = e.target;
+      const idx = parseInt(btn.dataset.index);
+      if(memoryFlipped.length >= 2 || memoryFlipped.includes(idx) || memoryMatched.includes(idx)) return;
+      btn.textContent = memoryCards[idx];
+      memoryFlipped.push(idx);
+      if(memoryFlipped.length === 2) {
+        setTimeout(checkMemoryMatch, 700);
+      }
+    }
+
+    function checkMemoryMatch() {
+      const [a,b] = memoryFlipped;
+      if(memoryCards[a] === memoryCards[b]) {
+        memoryMatched.push(a,b);
+        memoryResult.textContent = "You found a pair!";
+        if(memoryMatched.length === memoryCards.length) {
+          memoryResult.textContent = "🎉 You matched all pairs! 🎉";
+        }
+      } else {
+        // flip back
+        [a,b].forEach(i => {
+          const btn = memoryGrid.querySelector(`button[data-index='${i}']`);
+          if(btn) btn.textContent = "?";
+        });
+        memoryResult.textContent = "Try again!";
+      }
+      memoryFlipped = [];
+    }
+
+    function resetMemory() {
+      setupMemory();
+    }
+
+    function resetMemorySelection() {
+      // flip all unmatched back when leaving memory game
+      if(memoryGrid) {
+        memoryGrid.querySelectorAll("button").forEach(btn => {
+          if(!memoryMatched.includes(parseInt(btn.dataset.index))) {
+            btn.textContent = "?";
+          }
+        });
+      }
+      memoryFlipped = [];
+      memoryResult.textContent = "";
+    }
+
+    // Shuffle helper
+    function shuffleArray(array) {
+      for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+      }
+    }
+
+    // Initialize Memory on load
+    setupMemory();
+
+    // =========== Maze ===========
+    const mazeCanvas = document.getElementById("mazeCanvas");
+    const mazeCtx = mazeCanvas.getContext("2d");
+    const mazeSize = 20; // cells per row/col
+    const mazeCellSize = mazeCanvas.width / mazeSize;
+
+    // Maze: 0 = empty, 1 = wall, 2 = exit
+    // Simple hardcoded maze layout (20x20)
+    const mazeMap = [
+      [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],
+      [1,0,0,0,0,0,1,0,0,0,0,1,0,0,0,0,0,0,2,1],
+      [1,0,1,1,1,0,1,0,1,1,0,1,0,1,1,1,1,0,1,1],
+      [1,0,1,0,1,0,0,0,1,0,0,0,0,1,0,0,1,0,0,1],
+      [1,0,1,0,1,1,1,1,1,0,1,1,0,1,0,1,1,1,0,1],
+      [1,0,0,0,0,0,0,0,1,0,0,1,0,0,0,1,0,0,0,1],
+      [1,1,1,1,1,1,1,0,1,1,0,1,1,1,0,1,0,1,1,1],
+      [1,0,0,0,0,0,1,0,0,1,0,0,0,1,0,0,0,1,0,1],
+      [1,0,1,1,1,0,1,1,0,1,1,1,0,1,1,1,0,1,0,1],
+      [1,0,1,0,0,0,0,0,0,0,0,1,0,0,0,1,0,1,0,1],
+      [1,0,1,0,1,1,1,1,1,1,0,1,1,1,0,1,0,1,0,1],
+      [1,0,0,0,1,0,0,0,0,1,0,0,0,1,0,0,0,0,0,1],
+      [1,1,1,0,1,0,1,1,0,1,1,1,0,1,1,1,1,1,0,1],
+      [1,0,0,0,1,0,1,0,0,0,0,1,0,0,0,0,0,1,0,1],
+      [1,0,1,1,1,0,1,0,1,1,0,1,1,1,1,1,0,1,0,1],
+      [1,0,0,0,0,0,0,0,1,0,0,0,0,0,0,1,0,1,0,1],
+      [1,1,1,1,1,1,1,0,1,1,1,1,1,1,0,1,0,1,0,1],
+      [1,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,1,0,1],
+      [1,0,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,0,1],
+      [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],
+    ];
+
+    let playerPos = {x:1,y:1};
+    let mazeRunning = false;
+
+    function drawMaze() {
+      mazeCtx.clearRect(0,0,mazeCanvas.width,mazeCanvas.height);
+      for(let y=0; y<mazeSize; y++) {
+        for(let x=0; x<mazeSize; x++) {
+          if(mazeMap[y][x] === 1) {
+            mazeCtx.fillStyle = "#444";
+            mazeCtx.fillRect(x*mazeCellSize, y*mazeCellSize, mazeCellSize, mazeCellSize);
+          } else if(mazeMap[y][x] === 2) {
+            mazeCtx.fillStyle = "#2ecc40";
+            mazeCtx.fillRect(x*mazeCellSize, y*mazeCellSize, mazeCellSize, mazeCellSize);
+          } else {
+            mazeCtx.fillStyle = "#111";
+            mazeCtx.fillRect(x*mazeCellSize, y*mazeCellSize, mazeCellSize, mazeCellSize);
+          }
+        }
+      }
+      // Draw player
+      mazeCtx.fillStyle = "#0074D9";
+      mazeCtx.fillRect(playerPos.x * mazeCellSize, playerPos.y * mazeCellSize, mazeCellSize, mazeCellSize);
+    }
+
+    function startMaze() {
+      playerPos = {x:1,y:1};
+      mazeRunning = true;
+      document.getElementById("maze-result").textContent = "";
+      drawMaze();
+      mazeCanvas.focus();
+    }
+
+    function stopMaze() {
+      mazeRunning = false;
+    }
+
+    window.addEventListener("keydown", (e) => {
+      if (!mazeRunning) return;
+      const key = e.key;
+      let nx = playerPos.x;
+      let ny = playerPos.y;
+      if(key === "ArrowUp") ny--;
+      else if(key === "ArrowDown") ny++;
+      else if(key === "ArrowLeft") nx--;
+      else if(key === "ArrowRight") nx++;
+      else return;
+
+      if(nx < 0 || nx >= mazeSize || ny < 0 || ny >= mazeSize) return;
+      if(mazeMap[ny][nx] === 1) return; // wall
+
+      playerPos.x = nx;
+      playerPos.y = ny;
+      drawMaze();
+      if(mazeMap[ny][nx] === 2) {
+        document.getElementById("maze-result").textContent = "🎉 You escaped the maze!";
+        mazeRunning = false;
+      }
+    });
+
+  </script>
+</body>
+</html>
